[gd_scene format=3 uid="uid://dbh2abpt3lm42"]

[ext_resource type="Texture2D" uid="uid://jwtwxl000l4d" path="res://asssets/enemies/NightBorne/NightBorne.png" id="1_3muhx"]
[ext_resource type="Script" uid="uid://xhchye204d13" path="res://hazards/night_borne_enemy.gd" id="1_8d1o4"]

[sub_resource type="Animation" id="Animation_ccjs4"]
resource_name = "Death"
length = 2.0
loop_mode = 1
step = 0.085
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.085, 0.17, 0.255, 0.34, 0.425, 0.51, 0.595, 0.68, 0.765, 0.85, 0.935, 1.02, 1.105, 1.19, 1.275, 1.36, 1.445, 1.53, 1.615, 1.7, 1.785, 1.87),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114]
}

[sub_resource type="Animation" id="Animation_y7eh1"]
resource_name = "Hurt"
length = 0.5
loop_mode = 1
step = 0.085
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.085, 0.17, 0.255, 0.34),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [69, 70, 71, 72, 73]
}

[sub_resource type="Animation" id="Animation_3muhx"]
resource_name = "Idle"
length = 0.9
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 7, 8, 0]
}

[sub_resource type="Animation" id="Animation_8d1o4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_njfr4"]
resource_name = "Run"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [23, 24, 25, 26, 27, 28]
}

[sub_resource type="Animation" id="Animation_24knb"]
resource_name = "Slash"
length = 0.8666667
loop_mode = 1
step = 0.065
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.065, 0.13, 0.195, 0.26, 0.325, 0.39, 0.45499998, 0.52, 0.585, 0.65, 0.715),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ccjs4"]
_data = {
&"Death": SubResource("Animation_ccjs4"),
&"Hurt": SubResource("Animation_y7eh1"),
&"Idle": SubResource("Animation_3muhx"),
&"RESET": SubResource("Animation_8d1o4"),
&"Run": SubResource("Animation_njfr4"),
&"Slash": SubResource("Animation_24knb")
}

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_rcoua"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6i07u"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8d1o4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qfrpo"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ubjw1"]
radius = 24.627403

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ccjs4"]
radius = 29.0
height = 204.6154

[node name="NightBorneEnemy" type="CharacterBody2D" unique_id=352097399]
scale = Vector2(1.3, 1.3)
collision_layer = 16
collision_mask = 10
script = ExtResource("1_8d1o4")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=130492141]
texture_filter = 1
texture = ExtResource("1_3muhx")
hframes = 23
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=247307616]
libraries/ = SubResource("AnimationLibrary_ccjs4")

[node name="AnimationTree" type="AnimationTree" parent="." unique_id=944787605]
tree_root = SubResource("AnimationNodeStateMachine_rcoua")

[node name="EnvCollision" type="CollisionShape2D" parent="." unique_id=2135954066]
position = Vector2(3, 7.461538)
shape = SubResource("CapsuleShape2D_6i07u")

[node name="HurtBox" type="Area2D" parent="." unique_id=929442136]
position = Vector2(0, -1.5384617)
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox" unique_id=1420595604]
position = Vector2(3, 9)
shape = SubResource("CapsuleShape2D_8d1o4")
debug_color = Color(0.6993126, 0.43895534, 0.6004566, 0.41960785)

[node name="HitBox" type="Area2D" parent="." unique_id=1832662278]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" unique_id=1624419779]
position = Vector2(6, -29)
shape = SubResource("CircleShape2D_qfrpo")
debug_color = Color(0.8358192, 0.36061254, 0.38848218, 0.41960785)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitBox" unique_id=1946802618]
position = Vector2(16.153847, 2.3076925)
shape = SubResource("CircleShape2D_ubjw1")
debug_color = Color(0.8358192, 0.36061254, 0.38848218, 0.41960785)

[node name="DeaggroArea" type="Area2D" parent="." unique_id=598088089]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeaggroArea" unique_id=1608381702]
position = Vector2(1.5384616, -4.6153846)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_ccjs4")
